# tekari

./: .CMakeLists.txt.swp  .gitignore  .gitmodules  BSDF Visualizer  CMakeLists.txt  CMakeLists.txt.orig  CMakeLists.txt.rej  README.md  TODO.md  compile_webgl.sh  tekari.rc
ext/tbb_dummy/include/tbb/: parallel_for.h
include/: Axis.h  BSDFApplication.h  BSDFCanvas.h  ColorMap.h  ColorMapButton.h  ColorMapSelectionWindow.h  DataPoint.h  DataSample.h  DataSampleButton.h  HelpWindow.h  Metadata.h  MetadataWindow.h  RadialGrid.h  bsdf_application.h  bsdf_canvas.h  common.h  delaunay.h  radial_grid.h  sample_data.h  sample_data_parser.h  stop_watch.h  test.h
include/tekari/: Arrow.h  Axis.h  BSDFApplication.h  BSDFCanvas.h  BitMap.h  ColorMap.h  ColorMapButton.h  ColorMapSelectionWindow.h  DataSample.h  DataSampleButton.h  DataSampleSelection.h  HelpWindow.h  LightTheme.h  Metadata.h  MetadataElement.h  MetadataWindow.h  PointSampleInfo.h  RadialGrid.h  SelectionBox.h  SharedQueue.h  ThreadPool.h  arrow.h  brdf.h  bsdf_application.h  bsdf_canvas.h  bsdf_data_sample.h  bsdf_dataset.h  cie1931.h  color_map.h  color_map_button.h  color_map_selection_window.h  common.h  data_io.h  data_sample.h  data_sample_button.h  dataset.h  dataset_button.h  delaunay.h  graph_spectrum.h  help_window.h  (+21 more)
resources/: golden_paper - Copy.txt
resources/icons/: tekari.icns
resources/shaders/: arrow.frag  arrow.geom  arrow.vert  axis.frag  axis.geom  axis.vert  color_map.frag  color_map.vert  height_map.frag  height_map.vert  incident_angle.geom  incident_angle.vert  opengl_color_map.frag  opengl_height_map.frag  opengl_height_map.vert  opengl_path.frag  opengl_path.vert  opengl_points.frag  opengl_points.vert  opengl_radial_grid.frag  opengl_radial_grid.vert  opengl_wavelength_slider.vert  path.vert  points.frag  points.vert  radial_grid.vert  selected_points.frag  selected_points.vert
resources/webgl_shaders/: arrow.vert  color_map.frag  height_map.frag  path.frag  path.vert  points.vert  webgl_arrow.frag  webgl_color_map.vert  webgl_height_map.frag  webgl_height_map.vert  webgl_path.vert  webgl_points.frag  webgl_points.vert  webgl_radial_grid.frag  webgl_radial_grid.vert  webgl_wavelength_slider.frag  webgl_wavelength_slider.vert
src/: Arrow.cpp  Axis.cpp  BSDFApplication.cpp  BSDFCanvas.cpp  BitMap.cpp  ColorMap.cpp  ColorMapButton.cpp  ColorMapSelectionWindow.cpp  DataSample.cpp  DataSampleButton.cpp  DataSampleSelection.cpp  HelpWindow.cpp  Metadata.cpp  MetadataWindow.cpp  PointSampleInfo.cpp  RadialGrid.cpp  ThreadPool.cpp  arrow.cpp  axis.cpp  brdf.cpp  bsdf_application.cpp  bsdf_canvas.cpp  bsdf_data_sample.cpp  bsdf_dataset.cpp  color_map.cpp  color_map_button.cpp  color_map_selection_window.cpp  data_io.cpp  data_sample.cpp  data_sample_button.cpp  dataset.cpp  dataset_button.cpp  delaunay.c  help_window.cpp  main.cpp  mainbackup.cpp  metadata.cpp  metadata_window.cpp  points_stats.cpp  radial_grid.cpp  (+9 more)
